[gd_scene load_steps=9 format=3 uid="uid://dkdunxvgpeh0"]

[ext_resource type="Script" uid="uid://dlbxrfcd1pfaj" path="res://script/menu_de_juego.gd" id="1_yvmat"]
[ext_resource type="Texture2D" uid="uid://cd3x1v18owb1" path="res://backgrounds/The Last Standing.png" id="2_2gxhi"]
[ext_resource type="FontFile" uid="uid://bpq8k3mg0yvnx" path="res://fuente/Daydream DEMO.otf" id="4_0qcd5"]
[ext_resource type="Script" uid="uid://2xw4qbpyfuvh" path="res://script/label.gd" id="5_a8mqq"]

[sub_resource type="GDScript" id="GDScript_cbx86"]

[sub_resource type="FontVariation" id="FontVariation_t08yv"]
base_font = ExtResource("4_0qcd5")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cbx86"]

[sub_resource type="FontVariation" id="FontVariation_yvmat"]
base_font = ExtResource("4_0qcd5")

[node name="menu de juego" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvmat")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 647.0
color = Color(0.10980392, 0.16862746, 0.14117648, 1)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.7058824, 0.7058824, 0.7058824, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2gxhi")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -243.0
offset_right = 101.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 34
script = SubResource("GDScript_cbx86")

[node name="play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_t08yv")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cbx86")
text = "play
"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_t08yv")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cbx86")
text = "settings
"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_t08yv")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_cbx86")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cbx86")
text = "exit
"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -279.5
offset_top = 166.0
offset_right = 279.5
offset_bottom = 281.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontVariation_yvmat")
theme_override_font_sizes/font_size = 34
text = "The Last Standing
Tournament"
horizontal_alignment = 1
script = ExtResource("5_a8mqq")

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
